// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector type Snapshots renders all selected 1`] = `
<input
  checked={true}
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`Selector type Snapshots renders default 1`] = `
<input
  checked={false}
  onChange={[Function]}
  type="checkbox"
/>
`;
